# mtic_employee

./: .gitignore  Makefile  README.md  app.py  config.py  manage.py  requirements.txt  settings.py  setup.cfg  setup.py
.lh/: .gitignore.json
.lh/app/: __init__.py.json
.lh/app/admin/: __init__.py.json  forms.py.json  views.py.json
.lh/app/auth/: views.py.json
.lh/app/home/: __init__.py.json  views.py.json
.lh/app/static/css/: style.css.json
.lh/app/static/js/: script.js.json
.lh/app/templates/: base.html.json
.lh/app/templates/admin/: employees.html.json
.lh/app/templates/auth/: login.html.json  register.html.json
.lh/app/templates/home/: 403.html.json  404.html.json  admin_dashboard.html.json  (+5 more)
app/: __init__.py  enums.py  filters.py  models.py  sec.py  sec_models.py  sec_views.py  settings.py  test_data.py  views.py
app/admin/: forms.py  views.py
app/auth/: forms.py  views.py
app/database/: employee.db
app/home/: views.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/home/: 403.html  404.html  admin_dashboard.html  dashboard.html  index.html  superadmin_dashboard.html
deploy/: .env-example  Dockerfile  docker-compose.yaml
migrations/versions/: 9ebf5cf9c5d4_.py
mtapp/: __init__.py  auth.py  db.py  employee.py  employee_report.py  enums.py  models.py  user.py
mtapp/mtapp.egg-info/: PKG-INFO  SOURCES.txt
mtapp/templates/: employee-report.html  employee.html  index.html  navbar.html  user.html
templates/: base.html  form_view.html
(+12 files in other folders)
