[metadata]
name = mtapp
version = 1.0.0
url = https://github.com/muniter/mtic_employee
license = GPL-3
maintainer = Javier
maintainer_email = contact@muniter.com
description = Employee application for Mtic
long_description = file: README.md
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    mtapp
    flask-sqlalchemy
